# pingpulse

./: .gitignore  CLAUDE.md  Makefile  README.md  README.md.bak  eslint.config.js  install.ps1  install.sh  package.json  setup-telegram.sh
.claude/commands/: push.md  ship.md
.github/workflows/: deploy-convex.yml  deploy-worker.yml  release-client.yml
client/: Cargo.toml
client/src/: agent.rs  config.rs  heartbeat.rs  logger.rs  main.rs  messages.rs  probe.rs  service.rs  speed_test.rs  store.rs  sync.rs  trace.rs  websocket.rs
convex/: alertDispatch.ts  alerts.ts  analysis.ts  auth.ts  botSettings.ts  clients.ts  commands.ts  crons.ts  http.ts  ingest.ts  maintenance.ts  metrics.ts  monitor.ts  rateLimit.ts  reports.ts  schema.ts  telegram.ts  tsconfig.json
convex/_generated/: api.d.ts  api.js  dataModel.d.ts  server.d.ts  server.js
convex/lib/: config.ts  crypto.ts  healthReport.ts  notify.ts
dashboard/: eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
dashboard/src/: main.tsx
dashboard/src/components/: AlertStormSummary.tsx  ClientCard.tsx  ConnectionStateChart.tsx  EditClientDialog.tsx  FullAnalysisReport.tsx  Layout.tsx  ProbeStatsTable.tsx  RegisterDialog.tsx  ReportModal.tsx  SectionHeader.tsx  Sparkline.tsx  SpeedTestStats.tsx  ThroughputChart.tsx  WanQualityChart.tsx
dashboard/src/lib/: chart-defaults.ts  hooks.ts  local-agent.ts
docs/: novamini-network-analysis.md
worker/: .gitignore  eslint.config.js  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
worker/dashboard/: package.json  tsconfig.json  vite.config.ts
worker/migrations/: 0001_initial.sql  0002_add_client_version.sql  0002_bot_settings.sql  0003_client_probes.sql  0003_speed_test_target.sql  0004_trace_results.sql  0005_trace_flows.sql
worker/scripts/: pptrace.mjs
worker/src/: index.ts  types.ts
worker/test/: apply-migrations.ts  integration.test.ts  setup.ts
(+111 files in other folders)
