[package]
name = "pingpulse"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "signal", "process", "sync"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
dirs = "5"
http = "1"
futures-util = "0.3"
anyhow = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

[dev-dependencies]
tempfile = "3"
